# rustloc

./: .envrc  .gitignore  .release-sync-state.yaml  .shipit.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  action.yml  lefthook.yml  pixi.toml
.claude/: settings.json
.github/: homebrew-formula.rb.tmpl
.github/workflows/: checks.yml  ci.yml  release.yml  shipit-release.yml
.padz/: data.json  pad-899d7fee-5168-4861-8d20-1c647cd4c5c8.txt
CHANGELOG/: 0.17.2.md  0.18.0.md  0.19.0.md  0.19.1.md  legacy.md  unreleased-backend-seam.md  unreleased-cli-help-languages.md  unreleased-deps-cargo-group-bumps.md  unreleased-diff-line-precision.md  unreleased-diff-workdir-coverage.md  unreleased-fix-jammed-table-separator.md  unreleased-generic-backend.md  unreleased-github-action-pr-diff-comments.md  unreleased-language-cli-final-touches.md  unreleased-migrate-to-fragments.md  unreleased-python-backend.md  unreleased-python-hardening.md  unreleased-stats-arithmetic-tests.md  unreleased-stress-language-coverage.md  unreleased-table-linebreak-regression-tests.md  unreleased-typescript-backend.md
crates/rustloc/: Cargo.toml  release.toml
crates/rustloc/src/: app.rs  application.rs  command.rs  main.rs  pipeline_tests.rs  table.rs
crates/rustloc/styles/: default.css  default.yaml
crates/rustloc/templates/: count_table.jinja  diff_table.jinja  stats_table.jinja  table_macros.jinja
crates/rustloc/tests/: cli_integration.rs
crates/rustloc/tests/fixtures/: README.md  count_by_file.after.json  count_by_file.before.json  count_by_file.csv
crates/rustloc/tests/fixtures/render/: count_all_types.text  count_by_crate.term-debug  count_by_crate.text  count_by_crate_filtered.text  count_by_crate_top.text  count_by_file_csv.fixture  count_by_file_json.fixture  count_by_file_width_160.term-debug  count_by_file_width_80.text  count_by_file_xml.fixture  count_by_file_yaml.fixture  count_total.text  count_type_code.text  diff_by_crate.term-debug  diff_by_crate.text  diff_by_file_csv.fixture  diff_by_file_json.fixture  diff_by_file_width_160.text  diff_by_file_width_80.term-debug  diff_by_file_xml.fixture  diff_by_file_yaml.fixture
crates/rustloclib/: README.md
crates/rustloclib/examples/: compare_warloc.rs
crates/rustloclib/src/: lib.rs
crates/rustloclib/src/data/: backend.rs  counter.rs  diff.rs  mod.rs  typescript.rs  visitor.rs
crates/rustloclib/src/output/: table.rs
crates/rustloclib/src/query/: options.rs  queryset.rs
crates/rustloclib/src/source/: filter.rs  mod.rs  workspace.rs
rustloc/: Cargo.toml  README.md  release.toml
rustloc/src/: main.rs  render.rs
rustloc/styles/: default.yaml
rustloc/templates/: stats_table.jinja
rustloc/tests/: cli_integration.rs
rustloclib/: Cargo.toml  README.md  release.toml
rustloclib/examples/: compare_warloc.rs
rustloclib/src/: counter.rs  diff.rs  error.rs  lib.rs  options.rs  queryset.rs  stats.rs  table.rs  visitor.rs  workspace.rs
rustloclib/src/data/: backend.rs  counter.rs  diff.rs  mod.rs  python.rs  stats.rs  typescript.rs  visitor.rs
rustloclib/src/output/: mod.rs  table.rs
rustloclib/src/query/: mod.rs  options.rs  queryset.rs
rustloclib/src/source/: filter.rs  workspace.rs
scripts/: ci-publish-crate.sh  diff-since-release  pre-commit  release  setup-dev-env.sh
