[workspace]
resolver = "2"
members = ["rustloclib", "rustloc"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Arthur Debert"]
repository = "https://github.com/arthur-debert/rustloc"

[workspace.dependencies]
rustloclib = { path = "rustloclib" }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
walkdir = "2.5"
cargo_metadata = "0.18"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
