[workspace]
resolver = "2"
members = ["rustloclib", "rustloc"]

[workspace.package]
version = "0.19.0"
edition = "2021"
license = "MIT"
authors = ["Arthur Debert"]
repository = "https://github.com/arthur-debert/rustloc"

[workspace.dependencies]
rustloclib = { path = "rustloclib", version = "0.19.0" }
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
walkdir = "2.5"
cargo_metadata = "0.18"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gix = { version = "0.80", default-features = false, features = ["basic", "blob-diff"] }
imara-diff = "0.1.8"
standout = "7.6.2"
console = "0.15"
anyhow = "1.0"
oxc_allocator = "0.138"
oxc_parser = "0.138"
oxc_span = "0.138"
