[package]
name = "rustloc"
description = "Rust-aware LOC counter that separates production code from tests — even in the same file"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "../README.md"
homepage = "https://github.com/arthur-debert/rustloc"
keywords = ["loc", "lines-of-code", "code-counter", "rust", "test-separation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustloc"
path = "src/main.rs"

[dependencies]
rustloclib.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
standout.workspace = true
console.workspace = true
anyhow.workspace = true

[dev-dependencies]
serde_json.workspace = true
