[package]
name = "rustloclib"
description = "A Rust-aware lines of code counter that separates code, tests, comments, and blanks"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
glob.workspace = true
walkdir.workspace = true
cargo_metadata.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
tempfile = "3.10"
