[package]
name = "rustloclib"
description = "Rust-aware LOC counter that separates production code from tests — even in the same file"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage = "https://github.com/arthur-debert/rustloc"
documentation = "https://docs.rs/rustloclib"
keywords = ["loc", "lines-of-code", "code-counter", "rust", "test-separation"]
categories = ["development-tools"]

[dependencies]
glob.workspace = true
walkdir.workspace = true
cargo_metadata.workspace = true
thiserror.workspace = true
serde.workspace = true
utf8-chars = "3.0.6"
gix.workspace = true

[dev-dependencies]
tempfile = "3.10"
